# project-athena-oss

./: .env.example  .env.secrets.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.env.example  docker-compose.yml  requirements.txt
admin/backend/: Dockerfile  alembic.ini  main.py  requirements.txt
admin/backend/shared/: __init__.py  bypass_cache.py  cache.py  errors.py  events.py  http_client.py  llm_router.py  logging_config.py  metrics.py  module_registry.py  ollama_client.py  port_resolver.py  privacy_filter.py  pyproject.toml  service_registry.py  tracing.py  voice_config.py
admin/frontend/: CONVERSATION_SETTINGS_UI.md  Dockerfile  activity-sidebar.js  admin-jarvis.js  alerts.js  analytics.js  api-client.js  app.js  athena.js  auth.js  base-knowledge.js  calendar-sources.js  charts.js  cloud-providers.js  command-palette.js  conversation.js  crud-extensions.js  debug-logs.js  directions-settings.js  drawer.js  emerging-intents.js  escalation.js  features.js  follow-me.js  gateway-settings.js  guest-context.js  guest-mode.js  icons.js  index.html  integrations.js  keyboard.js  llm-components.js  memory-context.js  memory-management.js  metrics.js  mission-control.js  model-config.js  model-downloads.js  music-config.js  nginx.conf  (+22 more)
apps/: README.md
apps/gateway/: README.md
apps/jarvis-web/: Dockerfile  (+2 more)
docs/: CONFIGURATION.md  INSTALLATION.md  MODULES.md
scripts/: build-and-push.sh  create-secrets.sh  deploy.sh  generate-rag-dockerfiles.py  generate-rag-manifests.py  setup-mac-studio.sh
thoughts/: installation-issues.md
(+399 files in other folders)
